# 02_academia_app

./: .gitignore  appWeb.py  appWeb.txt  dados_treinos.py  exercicios.db  exercicios_stre.db  login.py  main.py  pyproject.toml  teste.py  usuarios.db
.devcontainer/: devcontainer.json
academia_app/base/: treinos.xlsx
pages/: appWeb_teste.py  page_login.py  page_teste.py
utils/: dados_treinos.py  login.py
