[tool.poetry]
name = "academia-app"
version = "0.1.0"
description = ""
authors = ["Espedito Ferreira Alves <espeditoalves123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kivy = "^2.3.0"
requests = "^2.31.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
buildozer = "^1.5.0"
streamlit = "^1.32.2"
flask = "^3.0.2"
numpy = "^1.26.4"
unidecode = "^1.3.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
blue = "^0.9.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
